experiment with real images

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "cubecl-test"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "cubecl_test"
+path = "src/lib.rs"
+
+[[bin]]
+name = "cubecl-sfm"
+path = "src/bin/cubecl-sfm.rs"
+
 [features]
 default = ["wgpu"]
 wgpu = []
@@ -12,3 +20,26 @@ cubecl = { version = "0.5.0", features = ["wgpu"] }
 nalgebra = "0.33.2"
 bytemuck = "1.23.0"
 serde = { version = "1.0", features = ["derive"] }
+
+# CLI and utilities
+clap = { version = "4.5", features = ["derive"] }
+anyhow = "1.0"
+env_logger = "0.11"
+indicatif = "0.17"
+
+# Image processing
+image = "0.25"
+kamadak-exif = "0.5"
+
+# Parallel processing
+rayon = "1.10"
+
+# Serialization
+serde_json = "1.0"
+serde_yaml = "0.9"
+
+# Linear algebra (for CPU operations)
+ndarray = "0.16"
+
+# File formats
+ply-rs = "0.1"
